// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test on CountryDeatils Componet fire event test  1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-1"
  >
    <div
      class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <img
        alt="flag"
        class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img"
      />
      <div
        class="MuiCardContent-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Country Name
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          india
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Capital
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          dehli
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Population
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          130cr
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Lat-Lng
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          -
        </p>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Weather Deatails
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`test on CountryDeatils Componet fire event test  2`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-1"
  >
    <div
      class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div>
        Error
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Search Another Country
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`test on CountryDeatils Componet snapshot testing on CountryDeatils  1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-2"
  >
    <div
      class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <img
        alt="flag"
        class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img"
      />
      <div
        class="MuiCardContent-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Country Name
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          india
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Capital
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          dehli
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Population
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          130cr
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Lat-Lng
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          -
        </p>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Weather Deatails
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`test on NavBar Componet finding text inside NavBar  1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        Country and Weather App
      </p>
    </div>
  </header>
</div>
`;

exports[`test on ShowError Componet snapshot testing on ShowError  1`] = `
<div>
  <div>
    Error
  </div>
</div>
`;
